css/home.css
@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    40% {
        opacity: 1;
    }
    60% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

#welcome_message {
    text-align: center;
    border-bottom: 1px solid black;
}

#welcome_message h3 {
    animation: fadeIn 2s linear infinite; 
}

#introduction {
    border-bottom: 1px solid black;
    padding: 5px;
}

#time {
    height: 175px;
    display: flex;
    justify-content: space-around;
    background-color: rgba(104,131,139, 1);
    border: 2.5px inset white;
    filter: blur(0.1px);
    position: relative;
    bottom: 0;
    margin: 5px;
}

.clock_column {
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.digital_clock {
    width: 140px;
    height: 40px;
    /*background-color: rgba(30, 10, 0, 1);*/
    background-color: rgba(26, 34, 38, 1);
    display: flex;
    justify-content: center;
    align-items: center;
    border: 2.5px inset white;
}

.digital_clock p {
    /*color: rgba(224, 88, 4, 1);*/ 
    width: 100%;
    color: rgba(189, 231, 252, 1);
    text-align: center;
    font-family: digital-7_monomono;
    font-size: 2rem;
    filter: blur(0.5px);
    text-shadow:
        0 0 7px rgba(189, 231, 252, 0.75),
        0 0 10px rgba(189, 231, 252, 0.25),
        0 0 21px rgba(189, 231, 252, 0.2),
        0 0 42px rgba(189, 231, 252, 0.2),
        0 0 82px rgba(189, 231, 252, 0),
        0 0 92px rgba(189, 231, 252, 0),
        0 0 102px rgba(189, 231, 252, 0),
        0 0 151px rgba(189, 231, 252, 0);
    /*text-shadow:
        0 0 7px rgba(224, 88, 4, 0.75),
        0 0 10px rgba(224, 88, 4, 0.75),
        0 0 21px rgba(224, 88, 4, 0.5),
        0 0 42px rgba(224, 88, 4, 0.5),
        0 0 82px rgba(224, 88, 4, 0),
        0 0 92px rgba(224, 88, 4, 0),
        0 0 102px rgba(224, 88, 4, 0),
        0 0 151px rgba(224, 88, 4, 0);*/
}

.circuit_label {
    font-family: DIN-6776;
    color: rgba(255, 255, 255, 1);
}

#double_feed {
    width: 100%;
    display: flex;
    height: 250px;
    padding: 5px;
    padding-top: 0px;
}

#soc {
    width: 50%;
    margin-right: 2.5px;
    overflow-y: scroll;
    overflow-x: hidden;
    border: 1px solid black;
    overscroll-behavior: none;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}
/* Hide scrollbar for Chrome, Safari and Opera */
#soc::-webkit-scrollbar {
    display: none;
}

#track_container {
    width: 50%;
    border: 1px solid black;
    text-align: center;
    overscroll-behabior: none; 
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none; /* Firefox */
}
/* Hide scrollbar for Chrome, Safari and Opera */
#track_container::-webkit-scrollbar {
    display: none;
}
#track_header {
    padding: 10px;
    border-bottom: 1px solid black;
    position: sticky;
    top: 0;
    background-color: white;
}
#tracks {
    width: 100%;
    margin-left: 2.5px;
    overflow-y: scroll;
    text-align: center;
}
.track {
    display: flex; 
    flex-direction: column;
    padding-top: 10px;
}
.track img {
    width: 50px;
    height: auto;
}
.track p {
}
.track a {
}

.bulletin{
    display: flex;
    flex-direction: column;
    width: 100%;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 10px;
    padding-right: 10px;
    border-collapse: collapse;
    margin: 0;
}

#bulletin_header {
    position: sticky;
    top: 0;
    border-bottom: 1px solid black;
    background-color: white;
}

.bulletin img {
    width: 100%;
}

#blinkie_webring_container {
    display: flex;
    flex-direction: column; 
    padding: 5px; 
    padding-top: 0px;
    width: 100%;
}

#blinkie_container {
    border: 1px solid black;
    padding: 5px;
    display: flex; 
    justify-content: center;
    align-items: center;
    flex-direction: column;
    margin-bottom: 2.5px;
}

#blinkies {
    display: flex;
    width: 100%;
    flex-wrap: wrap;
    justify-content: center;
}

#webring_container {
    border: 1px solid black;
    padding: 5px;
    display: flex; 
    justify-content: center;
    align-items: center;
    flex-direction: column;
    margin-top: 2.5px;
}

#webring {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    overflow-wrap: break-word;
    flex-wrap: wrap;
}

